--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ npm-debug.log
 # we ignore priv/static. You may want to comment
 # this depending on your deployment strategy.
 /priv/static/
+
+# Ignore dialyzer cache
+/priv/plts/*.plt
+/priv/plts/*.plt.hash
