--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           elixir-version: "1.12"
           otp-version: "24"
+          experimental-otp: true
       - uses: actions/cache@v2
         with:
           key: ${{ runner.os }}-mix-${{ hashFiles('mix.lock') }}
