--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -23,6 +23,8 @@ jobs:
             deps
             _build
             priv/plts
+          restore-keys: |
+            ${{ runner.os }}-mix-
       - name: Install dependencies
         run: |
           mix deps.get
